[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/gui/patches/box-patch.png" type="Texture" id=1]
[ext_resource path="res://materials/ui/theme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/gui/elements/SaveMenuSlot.gd" type="Script" id=3]
[ext_resource path="res://assets/gui/buttons/Cursor.png" type="Texture" id=4]
[ext_resource path="res://materials/fonts/atlas.tres" type="DynamicFont" id=5]
[ext_resource path="res://materials/fonts/stages.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/gui/buttons/blank_button.png" type="Texture" id=9]
[ext_resource path="res://assets/gui/buttons/Cursor-pressed.png" type="Texture" id=10]

[node name="Container" type="Control"]
margin_right = 117.0
margin_bottom = 22.0
script = ExtResource( 3 )

[node name="SlotContainer" type="NinePatchRect" parent="."]
margin_left = 4.0
margin_top = 3.0
margin_right = 85.0
margin_bottom = 18.0
theme = ExtResource( 2 )
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 24, 24 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 9
patch_margin_bottom = 8

[node name="SaveName" type="Label" parent="SlotContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 2.0
margin_right = 20.0002
margin_bottom = 2.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 5 )
text = "SaveFile"

[node name="LocationName" type="Label" parent="SlotContainer"]
anchor_right = 1.0
anchor_bottom = 0.952
margin_left = 6.74683
margin_top = 7.23597
margin_right = 10.747
margin_bottom = 8.004
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 7 )
text = "LocationName"

[node name="Playtime" type="Label" parent="SlotContainer"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -42.6326
margin_top = 6.71938
margin_right = 20.3674
margin_bottom = 6.71938
rect_scale = Vector2( 0.5, 0.5 )
text = "0:00"
align = 2

[node name="PreviewPanel" type="NinePatchRect" parent="SlotContainer"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.0
margin_top = -2.0
margin_right = 16.0
margin_bottom = 2.0
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 24, 24 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 9
patch_margin_bottom = 8

[node name="TextureRect" type="TextureRect" parent="SlotContainer/PreviewPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 4.0
margin_right = 329.0
margin_bottom = 221.0
rect_scale = Vector2( 0.05, 0.05 )

[node name="TextureButton" type="TextureButton" parent="SlotContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 8.0
margin_right = -44.0
margin_bottom = 22.0
rect_scale = Vector2( -0.33, 0.33 )
action_mode = 0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 4 )

[connection signal="focus_entered" from="SlotContainer/TextureButton" to="." method="_on_TextureButton_focus_entered"]
[connection signal="focus_exited" from="SlotContainer/TextureButton" to="." method="_on_TextureButton_focus_exited"]
